Fixed padding on mobile
Changed the spacing for smaller browsers (mobile) to show the
background and removed the unintentional left-right scrolling.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -117,7 +117,8 @@ header.site-header,
 footer.site-footer {
     width: 90%;
     background-color: white;
-    padding: $spacing-unit / 2 $spacing-unit;
+    padding: $spacing-unit / 2 4px;
+    margin: 0px auto;
 }
 
 .wrapper {
@@ -134,6 +135,7 @@ footer.site-footer {
         /* equivalent to 22px */
         width: 70%;
         margin: 0px auto;
+        padding: $spacing-unit / 2 $spacing-unit;
     }
     h1 {
         font-size: 2.5em;
